--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,7 +34,10 @@
         android:textAlignment="center"
         android:textColor="@color/design_default_color_primary"
         android:textSize="160sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_below="@+id/button_toast"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <Button
         android:id="@+id/button_count"
@@ -46,5 +49,7 @@
         android:background="@color/design_default_color_primary"
         android:onClick="countUp"
         android:text="@string/button_label_count"
-        android:textColor="@android:color/white" />
-</LinearLayout>
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/show_count"
+        android:layout_centerHorizontal="true"/>
+</RelativeLayout>
