--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/button_toast"
-        android:layout_width="398dp"
-        android:layout_height="wrap_content"
+        android:layout_width="337dp"
+        android:layout_height="98dp"
         android:layout_marginTop="16dp"
         android:background="@color/design_default_color_primary"
         android:onClick="showToast"
